# ultimata

./: .gitignore  Constants.h  Creature.cpp  Creature.h  Cursor.cpp  Cursor.h  GameMap.cpp  GameMap.h  Graphics.cpp  Graphics.h  HelperFunctions.cpp  HelperFunctions.h  Input.cpp  Input.h  LICENSE  Main.cpp  Main.h  README.md  System.cpp  System.h  Tile.cpp  Tile.h  Tileset.cpp  Tileset.h  Timer.cpp  Timer.h  dummy_client.cpp  dummy_client.py  makefile  run-tests.bat  run-tests.sh  setup.bat  setup.ps1  setup.sh  test_multiplayer.sh  test_with_dummies.bat
.github/workflows/: clang-tidy.yml
Ultimata.xcodeproj/: project.pbxproj
Ultimata.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Ultimata.xcodeproj/project.xcworkspace/xcuserdata/scientificwork.xcuserdatad/: UserInterfaceState.xcuserstate
Ultimata.xcodeproj/xcuserdata/scientificwork.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Ultimata.xcodeproj/xcuserdata/scientificwork.xcuserdatad/xcschemes/: Ultimata 2.xcscheme  Ultimata.xcscheme  xcschememanagement.plist
client/: .gitignore  CMakeLists.txt  README.md  makefile  start.bat  startit.bat  vcpkg.json
client/data/: Tileset_Main.ods
client/data/graphics/: charset2.xcf
client/data/images/: Image Sources.txt
client/data/maps/: gen_map.txt  map.txt  map2.txt  mapgood.txt  random1.txt
client/src/: Camera.cpp  ChatMessage.h  ChatOverlay.cpp  Constants.h  Creature.cpp  Equipment.h  EquipmentOverlay.h  FontManager.cpp  GameMap.cpp  Graphics.cpp  Monster.h  Sound.cpp  Sound.h  System.cpp  Tile.h  Timer.cpp  Timer.h
data/: tileset_description.txt  tilesheet_main.php
data/images/: Image Sources.txt  taizokai.tiff
data/maps/: collisionmap.txt  map.txt  map3.txt  map4.txt  randommap.txt
docs/: Documentation.md  Documentation.txt  Programming Style.md  Programming Style.txt  README.md  README.txt  Tile-Design-Improvements.md  architecture.md  testing.md
docs/doxygen/html/: _constants_8h.html  _constants_8h_source.html  _creature_8h.html  _creature_8h_source.html  _cursor_8h.html  _cursor_8h_source.html  _game_map_8h.html  _game_map_8h_source.html  _graphics_8h.html  _graphics_8h_source.html  _helper_functions_8h.html  _helper_functions_8h_source.html  _input_8h.html  _input_8h_source.html  _main_8cpp.html  _main_8h_source.html  _system_8h.html  _system_8h_source.html  _tile_8h.html  _tile_8h_source.html  _tileset_8h.html  _tileset_8h_source.html  _timer_8h.html  _timer_8h_source.html  annotated.html  class_creature-members.html  class_creature.html  class_cursor-members.html  class_cursor.html  class_game_map-members.html  class_game_map.html  class_graphics-members.html  class_graphics.html  class_input-members.html  class_input.html  class_l_texture-members.html  class_l_texture.html  class_system-members.html  class_system.html  class_tile-members.html  (+17 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  pages_0.js  searchdata.js
docs/doxygen/latex/: _constants_8h.tex  _creature_8h.tex  _cursor_8h.tex  _game_map_8h.tex  _graphics_8h.tex  _helper_functions_8h.tex  _input_8h.tex  _main_8cpp.tex  _system_8h.tex  _tile_8h.tex  _tileset_8h.tex  _timer_8h.tex  annotated.tex  class_creature.tex  class_cursor.tex  class_game_map.tex  class_graphics.tex  class_input.tex  class_l_texture.tex  class_system.tex  class_tile.tex  class_tileset.tex  class_timer.tex  files.tex  md___users_scientificwork_dev__ultimata_2__ultimata_2__r_e_a_d_m_e.tex  md__r_e_a_d_m_e.tex  refman.tex
dummy_clients/: Makefile.dummy  build_dummy.bat  test_python_dummies.py
nodejs-client/: index.ts  messageProtocol.ts  package-lock.json  package.json  vitest.config.ts
nodejs-client/tests/: messageProtocol.test.ts
old/: Graphics.cpp
python_server/: requirements-dev.txt  simple_server.py
python_server/tests/: test_game_server.py
server/: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.dev  MESSAGE_PROTOCOL.md  Main.cpp  Makefile  Makefile_cross_platform  README_CROSS_PLATFORM.md  build.bat  docker-compose.dev.yml  docker-compose.yml  install.bat  run-clang-tidy.ps1  setup-vcpkg.bat  start-server.bat  start-server.sh  startit.bat  test-server.sh  test_client.py  vcpkg.json
server/docs/: DOCKER_README.md  ExampleMessageUsage.cpp  MESSAGE_PROTOCOL.md  README_CROSS_PLATFORM.md
server/src/: AsioConnection.cpp  AsioConnection.h  AsioConnectionManager.cpp  AsioConnectionManager.h  AsioNetworkManager.cpp  AsioNetworkManager.h  Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  ExampleMessageUsage.cpp  GameState.cpp  GameState.h  GameStateManager.cpp  GameStateManager.h  INetworkManager.h  Main.cpp  MessageProtocol.h  MessageSerializer.cpp  MessageSerializer.h  MessageTypes.h  NetworkConfig.cpp  NetworkConfig.h  NetworkManager.cpp  NetworkManager.h  NetworkTask.h  Orchestrator.cpp  Orchestrator.h  SDLNetManager.cpp  ThreadSafeQueue.h
server/tests/: test_message_protocol.cpp  test_message_serializer.cpp
src/: Battle.h  Camera.cpp  Camera.h  Chat.h  ChatOverlay.h  Constants.h  Creature.cpp  Creature.h  Cursor.cpp  Dialogue.h  Equipment.cpp  EquipmentOverlay.cpp  FontManager.h  Graphics.cpp  Graphics.h  HelperFunctions.h  Input.cpp  Input.h  Item.cpp  Item.h  Main.cpp  Main.h  Map.cpp  Map.h  Message.cpp  Message.h  Monster.cpp  OldCode.cpp  Player.cpp  Player.h  Sound.cpp  Sound.h  System.cpp  System.h  Tile.cpp  Tile.h  Tileset.cpp  Tileset.h  Timer.cpp  Timer.h  (+4 more)
tests/: test_with_dummies.sh
tools/: map.txt  map2.txt  map_generator.py  randommap.py
